<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>buaahz_car_urdf_mid360</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for buaahz_car_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for buaahz_car_urdf robot</p>
  </description>
  <maintainer email="TODO@email.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- 构建依赖 -->
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  
  <!-- 执行依赖 -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
  </export>
</package>